# thermochimica

./: .gitignore  .gitmodules  .travis.yml  AGENTS.md  CMakeLists.txt  Doxyfile  LICENSE  Makefile  PackagesList.cmake  README.md  _config.yml  index.md  main.yml  run_tests  run_tests.sh  styles.css  trial-input.ti
src/: AddPureConPhase.f90  AddSolnPhase.f90  ArrowSolver.f90  Broyden.f90  CMakeLists.txt  CalculateCompositionSUBG.f90  CheckAddMisciblePhase.f90  CheckCompounds.f90  CheckConvergence.f90  CheckIterHistory.f90  CheckMiscibilityGap.f90  CheckPhaseAssemblage.f90  CheckPhaseAssemblageID.f90  CheckPhaseChange.f90  CheckPureConPhaseAdd.f90  CheckPureConPhaseRem.f90  CheckPureConPhaseRemHistory.f90  CheckSolnPhaseAdd.f90  CheckSolnPhaseRem.f90  CheckStagnation.f90  CheckSysOnlyPureConPhases.f90  CheckSystem.f90  CheckSystemExcess.f90  CheckThermoData.f90  CheckThermoInput.f90  CompChemicalPotential.f90  CompDrivingForce.f90  CompExcessGibbsEnergy.f90  CompExcessGibbsEnergyQKTO.f90  CompExcessGibbsEnergyRKMP.f90  CompExcessGibbsEnergySUBG.f90  CompExcessGibbsEnergySUBI.f90  CompExcessGibbsEnergySUBL.f90  CompFunctionNorm.f90  CompGibbsMagnetic.f90  CompGibbsMagneticSoln.f90  CompGibbsMagneticSolnInit.f90  CompMolAllSolnPhases.f90  CompMolFraction.f90  CompMolSolnPhase.f90  (+104 more)
src/api/: CompOtoMRatio.f90  ConvertToFortran.C  CouplingUtilities.f90  CouplingUtilitiesISO_C.f90  GetElementMolesInPhase.f90  GetOutputChemPot.f90  GetOutputMolSpeciesPhase.f90  GetOutputOinUO2.f90  GetOutputSolnSpecies.f90  GetOutputSpeciesStable.f90  GetSUBLMSiteFraction.f90  GetSUBLMSiteMol.f90  GetSUBLMStoichSublattice.f90  GetSUBLSiteFraction.f90  GetSolnPhaseMol.f90  MQMQAFunctions.f90  checkUnits.C  checkUnits.h
src/ctz/: CommonTangentZone.f90  InitCTZ.f90
src/debug/: PrintState.f90  ThermoDebug.f90
src/exec/: InputScriptMode.F90  ParseDataOnly.F90  Phase3DiagramDataGen.F90  PhaseDiagramDataGen.F90  RunCalculationList.F90
src/gem/: AddPureConPhase.f90  AddSolnPhase.f90  ArrowSolver.f90  CheckAddMisciblePhase.f90  CheckConvergence.f90  CheckIterHistory.f90  CheckMiscibilityGap.f90  CheckPhaseAssemblage.f90  CheckPhaseAssemblageID.f90  CheckPhaseChange.f90  CheckPureConPhaseAdd.f90  CheckPureConPhaseRem.f90  CheckPureConPhaseRemHistory.f90  CheckSolnPhaseAdd.f90  CheckSolnPhaseRem.f90  CheckSysOnlyPureConPhases.f90  CompChemicalPotential.f90  CompDrivingForce.f90  CompExcessGibbsEnergy.f90  CompExcessGibbsEnergyQKTO.f90  CompExcessGibbsEnergyRKMP.f90  CompExcessGibbsEnergySUBG.f90  CompExcessGibbsEnergySUBI.f90  CompExcessGibbsEnergySUBL.f90  CompExcessGibbsEnergySUBM.f90  CompFunctionNorm.f90  CompGibbsMagneticSoln.f90  CompGibbsMagneticSolnInit.f90  CompMagneticTemperatureMoment.f90  CompMolAllSolnPhases.f90  (+24 more)
test/: 3phaseDiagramRuPdMo.F90  CMakeLists.txt  CONVERSION_SUMMARY.md  Doxyfile  InputScriptMode.F90  MIGRATION_STATUS.md  Phase3DiagramDataGen.F90  PhaseDiagramDataGen.F90  QUICK_START.md  README_TEST_DRIVE.md  RunCalculationList.F90  TestThermo01.f90  TestThermo02.f90  TestThermo06.f90  TestThermo07.f90  TestThermo10.f90  Thermo.F90  Thermo.f90  Thermo_base.f90  Thermo_calls.f90  Thermo_trange.f90  Thermo_trange_CEF4.f90  ThermochimicaInputFileMode.F90  ThermochimicaInputScriptMode.F90  agcu.F90  carpet-MSRE.F90  compoundNiKF.F90  compoundReinit.F90  compoundRestart.F90  excludeTest.F90  fetivoEntropy.F90  heatCapacity.F90  heatCapacityLiF.F90  json-mag.F90  json-mqm.F90  json.F90  kaye.F90  lifthf.F90  loopCO.F90  mass.F90  (+14 more)
(+380 files in other folders)
