SET(${PROJECT_NAME}_ENABLE_thermochimica ON)
IF(NOT TRIBITS_PROCESSING_PACKAGE)
  PROJECT(${PROJECT_NAME} NONE)
  IF(DEFINED ENV{TRIBITS_CMAKE_MINIMUM_REQUIRED})
    CMAKE_MINIMUM_REQUIRED(VERSION ${TRIBITS_CMAKE_MINIMUM_REQUIRED})
  ELSE()
    CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
  ENDIF()
ELSE()
  SET(PNAME thermochimica)
  TRIBITS_PACKAGE(${PNAME})

  INCLUDE(${PNAME}_Compiler_Config)

  ADD_SUBDIRECTORY(src)
  TRIBITS_ADD_TEST_DIRECTORIES(test)

  TRIBITS_PACKAGE_POSTPROCESS()
  UNSET(PNAME)
ENDIF()
